# discord-bot-starter-q1-2026

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  dashboard  eslint.config.ts  goose  goose_gui  gtwall  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.omo/memory/: agent-feedback-guide.md  discord-bot-config.md  skill-usage-patterns.md
database/: schema.sql
external-references/: AGENTS.md  sapphirejs-dev-docs-batch_scrape_results.json
external-references/sapphirejs-docs-markdown/: sapphirejs.dev_docs_Documentation_api-framework.md  sapphirejs.dev_docs_Documentation_api-framework_classes_Args.md  sapphirejs.dev_docs_Documentation_api-framework_classes_CommandStore.md  sapphirejs.dev_docs_Documentation_api-framework_classes_Plugin.md  sapphirejs.dev_docs_Documentation_api-framework_classes_PreconditionContainerArray.md  sapphirejs.dev_docs_Documentation_api-framework_classes_PreconditionError.md  sapphirejs.dev_docs_Documentation_api-framework_classes_SapphireClient.md  sapphirejs.dev_docs_Documentation_api-framework_classes_UserError.md  sapphirejs.dev_docs_Documentation_api-framework_enumerations_CommandPreConditions.md  sapphirejs.dev_docs_Documentation_api-framework_interfaces_CommandOptions.md  sapphirejs.dev_docs_Documentation_api-framework_interfaces_ListenerOptions.md  sapphirejs.dev_docs_Documentation_api-framework_interfaces_PreconditionOptions.md  (+79 more)
scripts/: build-catalog  goosetown-ui
src/: index.ts
tests/: run_all.sh  test_catalog.py  test_dashboard.sh  test_gtwall.sh
ui/: index.html
(+27 files in other folders)
